# ignition-mcp

./: .gitignore  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
bridge/: build_zip.py
bridge/src/: doPost.py  mcp_bridge_lib.py
docs/: bridge.md  perspective-authoring.md
examples/: deploy-dashboard.md
src/ignition_mcp/: __init__.py  app.py  bridge.py  client.py  config.py  errors.py  guards.py  server.py
src/ignition_mcp/perspective/: VIEW_SCHEMA.md  schema.py
src/ignition_mcp/perspective/templates/: coordinate-basic.json  flex-basic.json  tag-bound-dashboard.json
src/ignition_mcp/tools/: alarms.py  bridge_admin.py  database.py  diagnostics.py  gateway.py  history.py  perspective.py  projects.py  tags.py
tests/live/: live_check.py
tests/unit/: conftest.py  test_bridge_admin.py  test_projects_perspective.py  test_schema_gateway_db.py  test_tags_history_alarms.py  test_write_guards.py
