[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ignition-mcp"
version = "0.1.1"
description = "MCP server for Inductive Automation Ignition: tags, alarms, history, projects, and full Perspective deployment"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "jsgorana" }]
keywords = ["ignition", "mcp", "scada", "perspective", "inductive-automation", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Manufacturing",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
ignition-mcp = "ignition_mcp.server:main"

[project.urls]
Homepage = "https://github.com/jsgorana/ignition-mcp"
Issues = "https://github.com/jsgorana/ignition-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ignition_mcp"]
artifacts = ["src/ignition_mcp/_bridge/mcp-bridge.zip"]

[tool.hatch.build.targets.wheel.force-include]
"bridge/mcp-bridge.zip" = "ignition_mcp/_bridge/mcp-bridge.zip"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
addopts = "-q"
